feat : custom button classes and responsive layouts

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -2,8 +2,11 @@ $black:#080808;
 $gray-500:#818181;
 $gray-400:#adacac;
 $gray-200:#dddddd;
+$gray-150:#f1f1f1;
 $gray-100:#f9f9f9;
-$primary:rgb(106, 84, 175);
+$primary:#6b54b0;
+$primaryHover:#634aad;
+
 $primary-light:#dfd4ff;
 $white:#fff;
 $blue-light:#d5eaf5;
