--- a/src/assets/scss/components/homepage/_hero.scss
+++ b/src/assets/scss/components/homepage/_hero.scss
@@ -21,3 +21,13 @@
 .hero-img{
   margin-top:-80px
 }
+
+@media screen and (max-width:768px) {
+  .hero-img{
+    max-width: 500px;
+    margin-top:0;
+    img{
+      max-width: 100%;
+    }
+  }
+}
