--- a/src/assets/scss/components/homepage/_testimonial.scss
+++ b/src/assets/scss/components/homepage/_testimonial.scss
@@ -44,9 +44,12 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .testimonial-right {
+    padding: 20px 0;
+  }
 
-@media screen and (max-width:768px) {
-  .testimonial-card{
+  .testimonial-card {
     max-width: 100%;
   }
 }
