--- a/src/assets/scss/components/ui/_section.scss
+++ b/src/assets/scss/components/ui/_section.scss
@@ -2,7 +2,7 @@
   padding: 60px 0;
 }
 
-.section-content{
+.section-content {
   font-size: 15px;
   line-height: 1.5;
 }
@@ -18,8 +18,12 @@
   margin-bottom: 20px;
 }
 
-@media screen and (max-width:768px) {
-  .section{
-    padding:30px 0;
+.section-gradient {
+  background: linear-gradient(rgb(245 242 255), rgb(160 130 255));
+}
+
+@media screen and (max-width: 768px) {
+  .section {
+    padding: 30px 0;
   }
 }
