feat : add blog detail page

--- a/src/assets/scss/components/_common.scss
+++ b/src/assets/scss/components/_common.scss
@@ -12,6 +12,10 @@
   font-size: 12px;
 }
 
+.fw-medium{
+  font-weight: 500;
+}
+
 .border-bottom-gray-200{
   border-bottom: 1px solid $gray-200;
 }
